# emf-mmf

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml
src/: camera.rs  colors.rs  config.rs  eletrical.rs  fields.rs  i18n.rs  lib.rs  main.rs  mmf_space.rs  setup.rs  stator.rs  ui.rs  vectors.rs  winding.rs
src/mmf_field/: render.rs  ui.rs
src/phase/: colors.rs  letter.rs  mod.rs
src/rotor/: render.rs  ui.rs
src/vectors/: mmf.rs  mod.rs
src/winding/: current.rs  header_coils.rs  mod.rs  render.rs  ui.rs
src/winding_scheme/: mod.rs  render.rs  ui.rs
web/: index.html
