[package]
name = "emf-mmf"
version = "0.1.0"
edition = "2024"

[features]
default = []
hotpatching = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimized release profile for Web (WASM) to reduce file size and improve performance
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
