[package]
name = "emf-mmf"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = ["bevy/dynamic_linking"]
test = ["dev"]
hotpatching = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18.1" }
# , default-features = false, features = [
#     "bevy_asset",
#     "bevy_core_pipeline",
#     "bevy_gizmos",
#     "bevy_pbr",
#     "bevy_render",
#     "bevy_text",
#     "bevy_winit",
#     "default_font",
#     "multi_threaded",
#     "tonemapping_luts",
#     "wayland",
#     "webgl2",
#     "x11",
# ] }
bevy_egui = "0.39.1"

# [dev-dependencies]
# bevy = { version = "0.18.1" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimized release profile for Web (WASM) to reduce file size and improve performance
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.performance]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
